:bug: - fix: fixed the overlapping of the icon

--- a/src/components/form/formcontrol/formcontrol.scss
+++ b/src/components/form/formcontrol/formcontrol.scss
@@ -6,6 +6,7 @@
   .mykn-input,
   .mykn-select {
     width: 100%;
+    padding-right: 30px;
   }
 
   &--direction-horizontal {
